deployment/oob-service/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oob-nlp
  namespace: oob-nlp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: <ELB_PUBLIC_DNS_NAME>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oob-nlp-api-service
            port:
              number: 8080
